# gcc_build_process

./: Makefile  README.md
005/: Makefile
006/: Makefile
007/: Makefile
008/: Makefile
009/: Makefile  my_math_add.c  my_math_add.h  my_math_sub.c  my_math_sub.h  my_math_test.c
010/: CMakeLists.txt
011/: CMakeLists.txt  my_math.c
012/: CMakeLists.txt  my_math_test.c
012/my_math/: CMakeLists.txt  my_math.h
